# mtoption

./: README.md  make.bat  pyproject.toml  requirements.txt
mtoption/: cli.py  option.py  series.py
mtoptions/: cli.py  estrategia.py  options.py
options/: cli.py  options.py
tests/: test_cli.py  test_estrategia.py  test_option.py  test_options.py
