[tool.poetry]
name = "options"
version = "0.1.0"
description = ""
authors = ["Valmir Franca <vfranca3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
pymql5 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
puts = "options.cli:puts"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
